objects/World_Region__c.object
<CustomObject>
    <description>For testing World Region</description>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Hierarchy__c</fullName>
        <formula>IF( NOT( ISBLANK( Country_Name__c ) ) , IF(ISBLANK(ParentId__r.ParentId__r.ParentId__r.ParentName__c),&apos;&apos;, ParentId__r.ParentId__r.ParentId__r.ParentName__c &amp; &quot;;&quot;) &amp; IF(ISBLANK(ParentId__r.ParentId__r.ParentName__c),&apos;&apos;, ParentId__r.ParentId__r.ParentName__c &amp; &quot;;&quot;) &amp; IF(ISBLANK(ParentId__r.ParentName__c),&apos;&apos;, ParentId__r.ParentName__c &amp; &quot;;&quot;) &amp; IF(ISBLANK(ParentName__c),&apos;&apos;, ParentName__c &amp; &quot;;&quot;) &amp; Country_Name__c &amp; &quot;;&quot; , &apos;&apos;)</formula>
        <label>Geographic Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentId</label>
        <referenceTo>World_Region__c</referenceTo>
        <relationshipName>CountryRegionHierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentName__c</fullName>
        <description>Parent country Name</description>
        <label>ParentName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF( NOT( ISBLANK( Country_Name__c ) ), BLANKVALUE( ParentId__r.ParentId__r.ParentId__r.ParentName__c , BLANKVALUE( ParentId__r.ParentId__r.ParentName__c , BLANKVALUE(  ParentId__r.ParentName__c , BLANKVALUE(  ParentName__c , &apos;&apos; )))), Country_Name__c )</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region1__c</fullName>
        <formula>IF( NOT( ISBLANK( Country_Name__c ) ), IF( NOT( ISBLANK( ParentId__r.ParentId__r.ParentId__r.ParentName__c ) ), ParentId__r.ParentId__r.ParentName__c , IF( NOT( ISBLANK( ParentId__r.ParentId__r.ParentName__c ) ), ParentId__r.ParentName__c , IF( NOT( ISBLANK( ParentId__r.ParentName__c) ), ParentName__c, Country_Name__c) ) ), &apos;&apos;)</formula>
        <label>Sub Region1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region2__c</fullName>
        <formula>IF( NOT( ISBLANK( Country_Name__c ) ), IF( NOT( ISBLANK( ParentId__r.ParentId__r.ParentId__r.ParentName__c ) ), ParentId__r.ParentName__c , IF( NOT( ISBLANK( ParentId__r.ParentId__r.ParentName__c ) ), ParentName__c , Country_Name__c ) ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region3__c</fullName>
        <formula>IF( NOT( ISBLANK( Country_Name__c ) ), IF( NOT( ISBLANK( ParentId__r.ParentId__r.ParentId__r.ParentName__c ) ), ParentName__c , Country_Name__c ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region3</label>
        <type>Text</type>
    </fields>
    <label>World Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Name__c</columns>
        <columns>ParentId__c</columns>
        <columns>Geographic_Hierarchy__c</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region1__c</columns>
        <columns>Sub_Region2__c</columns>
        <columns>Sub_Region3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>ParentId__c</columns>
        <columns>ParentName__c</columns>
        <columns>Country_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All_Fields</label>
    </listViews>
    <nameField>
        <label>World Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>World Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>